@@ -23,18 +23,23 @@ dspace.name = DSpace at My University
 ##### Database settings #####
 
 # Database name ("oracle", or "postgres")
-db.name = postgres
+db.name = ${db.name}
+#db.name = postgres
 #db.name = oracle
 
 # URL for connecting to database
-db.url = jdbc:postgresql://localhost:5432/dspace
+db.url = ${db.url}
+#db.url = jdbc:postgresql://localhost:5432/dspace
 
 # JDBC Driver
-db.driver = org.postgresql.Driver
+db.driver = ${db.driver}
+#db.driver = org.postgresql.Driver
 
 # Database username and password
-db.username = dspace
-db.password = dspace
+db.username = ${db.username}
+db.password = ${db.password}
+#db.username = dspace
+#db.password = dspace
 
 # Connection pool parameters
 
